Fix fit on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,8 +6,8 @@ body {
   font-family: 'Source Code Pro', sans-serif;
 }
   
-#id {
-  height: 100%;
+#root {
+  height: 95vh;
 }
 
 header {
